--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^9.14.2",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
+    "nocache": "^4.0.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
