--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.14.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
@@ -28,6 +29,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.1",
     "razorpay": "^2.9.5",
     "strip-ansi": "^6.0.1",
     "sweetalert": "^2.1.2"
