--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.14.2",
     "moment": "^2.30.1",
