--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
